# electron-app-tracker

./: README.md  Tracker.ipynb  electron_apps.csv  electron_apps.json  pyproject.toml
electron_tracker/: logger.py  scraper.py  vulncheck.py
